Fix login window and header alignment and sizing.

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,26 +1,32 @@
 .header {
     min-width: 480px;
-    padding: 8px 153px;
+    padding: 8px 0;
     color: #fff;
     height: 45px;
     background: linear-gradient(180deg, #449587 0%, #2A8676 100%);
     box-shadow: 0 3px 0 0 rgba(92, 186, 150, 0.5);
 }
 
-.header .cart-icon {
+.header .centered-bar {
+    max-width: 1000px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+.centered-bar .cart-icon {
     display: inline-block;
     height: 30px;
     cursor: pointer;
 }
 
-.header .username-container {
+.centered-bar .username-container {
     display: inline-block;
     float: right;
     font-size: 15px;
     font-family: "PT Sans", serif;
 }
 
-.header .username-container .exit-icon {
+.centered-bar .username-container .exit-icon {
     display: inline-block;
     height: 30px;
     cursor: pointer;
